# dotfiles

./: .gitignore  Makefile  README.md  alias  alias.local  alias.local.sh  aliases.conf  aliases.source  bash.ps  comicify.sh  cputemp  crontab  dependencies.sh  dig.ps  first-install.sh  flatten.sh  fullbackup.sh  gallery.sh  getlist  import-config  install.bash  install.sh  install.zsh  jump  last_commits_with_string.sh  libbeagan  libbeagan.dot  libbeagan.source  myip.sh  on_cron.sh  playground-source.sh  project.meta.yaml  qrencoder.sh  restart_touchpad.sh  restart_touchpad_2.sh  setupSshKeygen.sh  shard  shard.sh  sorthome  source-alias.sh  (+11 more)
_deprecated/: README.md  install.bash  source-alias.sh  source-settings.sh
aliases/: README.md  alias_android.zsh  alias_api.zsh  alias_extract.zsh  alias_git.zsh  alias_gpt.zsh  alias_gradle.zsh  alias_holiday_prompt.zsh  alias_imagemagick.zsh  alias_java.zsh  alias_js.zsh  alias_ls.zsh  alias_mac.zsh  alias_machine_linux.sh  alias_machine_linux.zsh  alias_machine_mac.zsh  alias_misc.zsh  alias_network.zsh  alias_notes.zsh  alias_other.zsh  alias_python.zsh  alias_recco.zsh  alias_recco_linux.zsh  alias_recco_mac.zsh  alias_remove_empty.zsh  alias_req_ext_api.zsh  alias_scriptify.zsh  alias_tagger.zsh  alias_task_cmd.zsh  alias_teleport.zsh  alias_unix.zsh  off_alias_hoiday_prompt.zsh  off_alias_holiday_prompt.zsh  off_alias_recco.zsh
bash/: install.bash  source-alias.sh  source-functions.sh
templates/sample/textual-mastodon/: pyproject.toml  run.sh
templates/sample/textual-mastodon/textual_mastodon/: bar.py  main.py
(+1888 files in other folders)
