[tool.poetry]
name = "textual-mastodon"
version = "0.1.0"
description = ""
authors = ["Patrick Beagan <pbeagan1@gmail.com>"]
readme = "README.md"
packages = [{include = "textual_mastodon"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.5.0"}
mastodon-py = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
